--- a/src/components/ActiveBattalions/ActiveBattalion.module.css
+++ b/src/components/ActiveBattalions/ActiveBattalion.module.css
@@ -11,6 +11,22 @@
   background: rgb(191, 227, 241);
 }
 
+.activeBattalion ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 5px;
+}
+.activeBattalion li {
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+  text-align: center;
+}
+
 .activeBattalion {
   display: flex;
   flex-direction: column;
@@ -33,8 +49,8 @@
   display: flex;
   justify-content: center;
 }
-.battalionName h2 {
-  margin: 0;
+.battalionName h3 {
+  color: rgb(191, 227, 241);
 }
 
 .battalionBonuses {
