--- a/src/components/UI/LoadingSpinner.module.css
+++ b/src/components/UI/LoadingSpinner.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 50vw;
+  width: 100%;
+  padding-bottom: 100%;
 }
 
 .loader {
