--- a/src/components/UserGroups/GroupDetail.module.css
+++ b/src/components/UserGroups/GroupDetail.module.css
@@ -29,6 +29,9 @@
   align-items: center;
   text-align: center;
 }
+.detailNavItem:hover {
+  cursor: pointer;
+}
 .active {
   background: rgb(113, 170, 207);
 }
