--- a/src/components/UserGroups/GroupList.module.css
+++ b/src/components/UserGroups/GroupList.module.css
@@ -1,4 +1,4 @@
-.groupList {
+.groupSection {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,4 +8,12 @@
   background: rgb(113, 170, 207);
   margin-left: 2%;
   box-shadow: 0 0 6px rgb(0, 0, 0);
+}
+
+.groupList {
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+  width: 100%;
+  overflow: scroll;
 }
