--- a/src/components/UnitContainer/UnitContainer.module.css
+++ b/src/components/UnitContainer/UnitContainer.module.css
@@ -1,16 +1,16 @@
 .unitcontainer {
   /* border: 3px solid rgb(30, 78, 110); */
-  background: rgb(48, 127, 179);
+  background: #3b87a6;
   padding-bottom: 7px;
   width: 88%;
-  
+
   margin-bottom: 3vw;
 }
 .containerheader {
   display: flex;
   justify-content: center;
   width: 100%;
-  background-color: rgb(30, 78, 110);
+  background-color: #015178;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
