--- a/src/components/UserGroups/GroupDetail.module.css
+++ b/src/components/UserGroups/GroupDetail.module.css
@@ -4,7 +4,7 @@
 
   width: 70%;
   height: 98%;
-  background: rgb(113, 170, 207);
+  background: #cfcfb8;
   margin-left: 5%;
   box-shadow: 0 0 6px rgb(0, 0, 0);
 }
@@ -14,13 +14,13 @@
   justify-content: space-around;
   width: 100%;
   height: 10%;
-  background: rgb(72, 105, 128);
+  background: #015178;
 }
 
 .detailNavItem {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-
+  color: #cfcfb8;
   width: 35%;
   font-size: 1.5em;
   font-weight: bold;
@@ -33,5 +33,6 @@
   cursor: pointer;
 }
 .active {
-  background: rgb(113, 170, 207);
+  background: #cfcfb8;
+  color: rgb(36, 36, 36);
 }
