--- a/src/components/UserGroups/GroupItem.module.css
+++ b/src/components/UserGroups/GroupItem.module.css
@@ -5,7 +5,7 @@
   height: 10%;
   border-radius: 0;
   margin-top: 1%;
-  background: rgb(61, 146, 202);
+  background: #3b87a6;
   transition: transform 0.2s;
 }
 
