--- a/src/components/UserGroups/GroupList.module.css
+++ b/src/components/UserGroups/GroupList.module.css
@@ -5,7 +5,7 @@
 
   width: 20%;
   height: 98%;
-  background: rgb(113, 170, 207);
+  background: #cfcfb8;
   margin-left: 2%;
   box-shadow: 0 0 6px rgb(0, 0, 0);
 }
