--- a/src/components/UserGroups/MemberItem.module.css
+++ b/src/components/UserGroups/MemberItem.module.css
@@ -1,5 +1,12 @@
 .memberItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border-radius: 0;
   height: 8%;
-  background: rgb(61, 146, 202);
+  background: #3b87a6;
+}
+.admin {
+  margin-left: auto;
 }
