--- a/src/components/ArmiesModal/ArmiesModal.module.css
+++ b/src/components/ArmiesModal/ArmiesModal.module.css
@@ -1,3 +1,7 @@
 .armiesModal {
-    width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+  width: 60%;
 }
