--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -2,8 +2,9 @@
   position: fixed;
   z-index: 50;
   height: 85%;
-  background: rgb(70, 70, 70);
+  background: #f7ecdb;
   overflow-y: scroll;
+  filter: drop-shadow(0px 0px 4px #2b2b2b);
 }
 
 .overlay {
