create and send notifications
create and send notifications through n otifications context

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -41,3 +41,11 @@
 .navbar .active {
   background: #cfcfb8;
 }
+
+.notification {
+  width: 30px;
+  height: 30px;
+  font-size: 200%;
+  font-weight: 900;
+  color: rgb(255, 255, 255);
+}
