--- a/src/components/ActiveBattalions/ActiveBattalion.module.css
+++ b/src/components/ActiveBattalions/ActiveBattalion.module.css
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 25%;
-  height: 20vw;
+  height: 50%;
   background: #cfcfb8;
 
   margin-top: 2%;
@@ -48,7 +48,7 @@
 
 .battalionName {
   width: 100%;
-  background: rgb(34, 99, 124);
+  background: #015178;
   display: flex;
   justify-content: center;
 }
@@ -61,7 +61,8 @@
   display: flex;
   justify-content: center;
   margin-top: auto;
-  background: rgb(2, 68, 168);
+  background: #3b87a6;
+  border: 1px solid black;
 }
 .battalionBonusesUsed {
   cursor: pointer;
@@ -69,15 +70,14 @@
   justify-content: center;
   margin-top: auto;
   background: rgb(71, 71, 71);
+  border: 1px solid black;
 }
 .battalionBonuses h3 {
-  border: 2px solid black;
   padding: 3px;
   margin-top: 6px;
   margin-bottom: 2px;
 }
 .battalionBonusesUsed h3 {
-  border: 2px solid black;
   padding: 3px;
   margin-top: 6px;
   margin-bottom: 2px;
@@ -106,10 +106,15 @@
   color: rgb(207, 207, 207);
   background: rgba(51, 51, 51, 0.877);
   margin-left: 20px;
-  bottom: 20px;
+  bottom: 30%;
   border-radius: 5px;
 }
 
 .hidden {
   display: none;
+}
+
+.delete {
+  margin-top: 5%;
+  margin-bottom: 2%;
 }
