--- a/src/components/Units/Unit.module.css
+++ b/src/components/Units/Unit.module.css
@@ -2,7 +2,7 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  background: rgb(140, 160, 184);
+  background: #cfcfb8;
   /* border: 4px solid rgb(30, 78, 110); */
   margin-left: 5%;
   margin-right: 5%;
@@ -24,7 +24,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  border-right: 5px solid rgb(30, 78, 110);
+  border-right: 5px solid #015178;
 }
 
 .unitattributes {
