--- a/src/components/UserGroups/BattleLogs/NewBattleModal.module.css
+++ b/src/components/UserGroups/BattleLogs/NewBattleModal.module.css
@@ -15,6 +15,7 @@
   margin-top: 10%;
 }
 .logForm select {
+  margin-top: 2%;
   width: 100%;
   text-align: center;
 }
@@ -22,4 +23,9 @@
   margin: auto;
   margin-top: 30%;
   width: 100%;
+}
+
+.armyListInput {
+  width: 150%;
+  height: 100%;
 }
