--- a/src/components/UserGroups/GroupDetail.module.css
+++ b/src/components/UserGroups/GroupDetail.module.css
@@ -20,7 +20,7 @@
 .detailNavItem {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  color: #cfcfb8;
+  color: rgb(202, 217, 228);
   width: 35%;
   font-size: 1.5em;
   font-weight: bold;
