--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,18 +1,21 @@
 .navbar {
+  display: flex;
+  flex-direction: row;
   width: 100%;
   background: #015178;
-  height: 3vw;
+  height: 12%;
 }
 
 .navbar ul {
   display: flex;
   justify-content: center;
-
+  width: 70%;
   height: 100%;
   margin: 0;
 }
 
 .navbar li {
+  position: relative;
   display: flex;
   margin-right: 5px;
   height: 100%;
@@ -28,7 +31,8 @@
 
 .navbar a {
   display: flex;
-
+  color: inherit;
+  font-size: large;
   line-height: 50%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -36,6 +40,7 @@
   align-items: center;
   text-decoration: none;
   width: 100%;
+
   height: 100%;
 }
 .navbar .active {
@@ -43,9 +48,21 @@
 }
 
 .notification {
-  width: 30px;
-  height: 30px;
-  font-size: 200%;
-  font-weight: 900;
-  color: rgb(255, 255, 255);
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+.title {
+  align-items: center;
+  display: flex;
+  color: #cfcfb8;
+  justify-content: flex-end;
+  width: 35%;
+  font-size: xx-large;
+}
+
+.sigmarSquare {
+  height: 100%;
+  width: auto;
+  margin-left: 5rem;
 }
