--- a/src/components/ActiveBattalions/ActiveBattalion.module.css
+++ b/src/components/ActiveBattalions/ActiveBattalion.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  z-index: 10;
   width: 20%;
 }
 
@@ -40,6 +40,8 @@
   margin-top: 2%;
   margin-bottom: 2%;
   transition: transform 0.2s;
+  position: relative;
+  z-index: 10;
 }
 
 .activeBattalion:hover {
@@ -99,12 +101,14 @@
 .details {
   display: flex;
   justify-content: center;
-  width: 70%;
+  width: 60%;
   padding: 10px;
-  z-index: 10;
+  z-index: 50;
   position: absolute;
   color: rgb(207, 207, 207);
   background: rgba(51, 51, 51, 0.877);
+  font-size: large;
+  font-weight: bold;
   margin-left: 20px;
   bottom: 30%;
   border-radius: 5px;
