--- a/src/components/Battalions/BattalionsMain.module.css
+++ b/src/components/Battalions/BattalionsMain.module.css
@@ -9,11 +9,17 @@
 }
 .containerheader {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   width: 100%;
   background-color: rgb(30, 78, 110);
 }
 .containerheader h2 {
+  margin: 1px;
+  color: rgb(202, 217, 228);
+}
+.containerheader div {
   margin: 1px;
   color: rgb(202, 217, 228);
 }
