--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,6 +9,7 @@
 .navbar ul {
   display: flex;
   justify-content: center;
+  align-items: flex-end;
   width: 70%;
   height: 100%;
   margin: 0;
@@ -17,12 +18,13 @@
 .navbar li {
   position: relative;
   display: flex;
+  flex-direction: column;
   margin-right: 5px;
-  height: 100%;
+  height: 80%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   list-style-type: none;
 
   width: 20%;
