--- a/src/components/UI/LoadingSpinner.module.css
+++ b/src/components/UI/LoadingSpinner.module.css
@@ -1,8 +1,10 @@
 .loaderContainer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  /* width: 50vh;
+  height: 50vh; */
   padding-bottom: 100%;
 }
 
@@ -10,8 +12,8 @@
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
-  width: 300px;
   height: 300px;
+  width: 300px;
   animation: spin 2s linear infinite;
 }
 
