--- a/src/components/UserGroups/BattleLogs/BattleLogsContainer.module.css
+++ b/src/components/UserGroups/BattleLogs/BattleLogsContainer.module.css
@@ -1,6 +1,35 @@
 .battleLogsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 95%;
   height: 80%;
-  background: #3b87a6;
+  /* background: #3b87a6; */
   margin: auto;
+}
+.battleLogsContainer button {
+  width: 20%;
+  margin: 2%;
+  box-shadow: 0px 0px white;
+}
+
+.logsList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  border: 2px solid #015178;
+  /* border-radius: 12px; */
+  background: #3b87a6;
+}
+.logTitle {
+  display: flex;
+  justify-content: center;
+  width: 100.5%;
+  background: #015178;
+  color: rgb(202, 217, 228);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
