--- a/src/components/UserGroups/GroupItem.module.css
+++ b/src/components/UserGroups/GroupItem.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 92%;
   height: 10%;
+  min-height: 10%;
   border-radius: 0;
   margin-top: 1%;
   background: #3b87a6;
