--- a/src/components/UserGroups/GroupList.module.css
+++ b/src/components/UserGroups/GroupList.module.css
@@ -9,6 +9,12 @@
   margin-left: 2%;
   box-shadow: 0 0 6px rgb(0, 0, 0);
 }
+.groupSection form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3%;
+}
 
 .groupList {
   display: flex;
@@ -16,4 +22,9 @@
   height: 80%;
   width: 100%;
   overflow: scroll;
+}
+
+.loadingSpinner {
+  width: 15vh;
+  height: 15vh;
 }
