--- a/src/components/AddUnits/AddUnitModal.module.css
+++ b/src/components/AddUnits/AddUnitModal.module.css
@@ -1,13 +1,16 @@
 .modal {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 50%;
   padding: 5%;
 }
 .form {
+  width: 80%;
   display: flex;
   flex-direction: column;
-  background: cornflowerblue;
+  align-items: center;
+  background: #3b87a6;
   padding: 5%;
   border-radius: 20px;
 }
@@ -25,7 +28,7 @@ select {
   border: 2px solid rgb(15, 63, 85);
   width: 8vw;
   height: 3vw;
-  background: rgb(61, 181, 236);
+  background: #3b87a6;
   border-radius: 15px;
   box-shadow: 4px 4px rgb(35, 96, 124);
   margin-bottom: 10px;
