--- a/src/pages/Army.module.css
+++ b/src/pages/Army.module.css
@@ -5,7 +5,7 @@
   border: 2px solid rgb(15, 63, 85);
   width: 8vw;
   height: 3vw;
-  background: rgb(24, 117, 179);
+  background: #3b87a6;
   border-radius: 15px;
   box-shadow: 4px 4px rgb(35, 96, 124);
   margin-bottom: 10px;
