show invite error/success in ui
show group invite error and success in ui

--- a/src/components/UserGroups/Members.module.css
+++ b/src/components/UserGroups/Members.module.css
@@ -2,4 +2,13 @@
   padding-top: 5%;
   height: 80%;
   width: 90%;
+  margin-left: 3%;
+}
+.errorMsg {
+  color: red;
+  font-weight: bolder;
+}
+.successMsg {
+  color: rgb(8, 180, 8);
+  font-weight: bolder;
 }
