--- a/src/components/Auth/LoginForm.module.css
+++ b/src/components/Auth/LoginForm.module.css
@@ -3,21 +3,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  opacity: 98%;
+
   /* border: 3px solid rgb(30, 78, 110); */
   background: #3b87a6;
   width: 50%;
-  margin-top: 10vw;
+  margin-top: 10%;
   padding: 1rem;
   font-weight: bold;
 }
 
-section {
+.section {
   display: flex;
   flex-direction: column;
-
   align-items: center;
-  height: 100vw;
 }
 .error {
   margin: 5px;
