--- a/src/components/UserGroups/MemberItem.module.css
+++ b/src/components/UserGroups/MemberItem.module.css
@@ -1,12 +1,33 @@
 .memberItem {
+  margin: 0px;
+  margin-top: 1%;
+  font-weight: bolder;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   border-radius: 0;
-  height: 8%;
-  background: #3b87a6;
+  height: 10%;
+  min-height: 10%;
+  background: #cfcfb8;
+  transition: transform 0.2s;
+}
+.memberItem:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
+.userName {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 .admin {
-  margin-left: auto;
+  border-radius: 15px;
+  background: rgb(87, 224, 87);
+  font-size: smaller;
+  position: absolute;
+  font-weight: normal;
+  padding: 0.7%;
+
+  right: 5%;
 }
