--- a/src/components/UserGroups/Members.module.css
+++ b/src/components/UserGroups/Members.module.css
@@ -1,14 +1,70 @@
-.membersList {
-  padding-top: 5%;
+.membersPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 80%;
-  width: 90%;
-  margin-left: 3%;
 }
+
+.membersList {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background: #3b87a6;
+  padding-top: 2%;
+  height: 65%;
+  width: 79.7%;
+  border: 2px solid #015178;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin: auto;
+  overflow: scroll;
+}
+.groupName {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  background: #015178;
+  color: rgb(202, 217, 228);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  box-shadow: 0 0 5px rgb(97, 97, 97);
+  margin: auto;
+  margin-top: 5%;
+}
+
+.card {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
 .errorMsg {
-  color: red;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  padding: 2px;
+  margin-left: 2px;
+  background: rgb(211, 0, 0);
+  top: 20%;
+  color: black;
   font-weight: bolder;
+  border-radius: 15px;
+  padding: 1%;
 }
 .successMsg {
-  color: rgb(8, 180, 8);
+  display: flex;
+  align-items: center;
+  padding: 2px;
+  margin-left: 2px;
+  background: rgb(77, 211, 0);
+  position: absolute;
+  top: 20%;
+  color: black;
   font-weight: bolder;
+  border-radius: 15px;
+  padding: 1%;
+}
+.inviteUser {
+  display: flex;
+  justify-content: center;
 }
