--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   width: 100%;
   background: #015178;
-  height: 12%;
+  height: 10%;
 }
 
 .navbar ul {
@@ -67,4 +67,10 @@
   height: 100%;
   width: auto;
   margin-left: 5rem;
+}
+
+.logout {
+  height: 50%;
+  align-self: center;
+  margin-right: 3%;
 }
