--- a/src/components/UserGroups/Members.module.css
+++ b/src/components/UserGroups/Members.module.css
@@ -50,7 +50,7 @@
   font-weight: bolder;
   border-radius: 6px;
   padding: 1%;
-  opacity: 80%;
+  opacity: 0.8;
 }
 .successMsg {
   display: flex;
@@ -64,7 +64,7 @@
   font-weight: bolder;
   border-radius: 6px;
   padding: 1%;
-  opacity: 80%;
+  opacity: 0.8;
 }
 .inviteUser {
   display: flex;
