--- a/src/components/Units/Unit.module.css
+++ b/src/components/Units/Unit.module.css
@@ -74,7 +74,7 @@
   filter: drop-shadow(0px 0px 0px #200000);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .warscroll {
     width: 85vw;
     height: auto;
@@ -84,10 +84,16 @@
     display: inline-block;
   }
   .unit {
-    margin-left: 0%;
-    margin-right: 0%;
+    padding: 1px;
+    margin-left: 0.5%;
+    margin-right: 2%;
   }
   .unit td {
-    padding: 1px;
+    padding: 2px;
+    font-size: 0.8rem;
+    /* font-siz */
+  }
+  .unitName h2 {
+    font-size: large;
   }
 }
